template-sonarqube/before-clean/dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2020-01-22T11:00:39Z
    generation: 2
    labels:
      app: sonarqube
    name: sonarqube
    namespace: sonar-make
    resourceVersion: "23700221"
    selfLink: /apis/apps.openshift.io/v1/namespaces/sonar-make/deploymentconfigs/sonarqube
    uid: 6d079662-3d06-11ea-981e-0602d3a61226
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: sonarqube
      deploymentconfig: sonarqube
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: sonarqube
          deploymentconfig: sonarqube
      spec:
        containers:
        - image: docker.io/sonarqube@sha256:184b2b19fb010331a638bad0900efc2c107e59890e516cb3ea23da0852a8cc92
          imagePullPolicy: Always
          name: sonarqube
          ports:
          - containerPort: 9000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/sonarqube/data
            name: sonarqube-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: sonarqube-volume-1
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - sonarqube
        from:
          kind: ImageStreamTag
          name: sonarqube:latest
          namespace: openshift
        lastTriggeredImage: docker.io/sonarqube@sha256:184b2b19fb010331a638bad0900efc2c107e59890e516cb3ea23da0852a8cc92
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2020-01-22T11:00:56Z
      lastUpdateTime: 2020-01-22T11:00:56Z
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: 2020-01-22T11:00:43Z
      lastUpdateTime: 2020-01-22T11:00:57Z
      message: replication controller "sonarqube-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
