template-sonarqube/before-clean/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: 2020-01-22T11:01:48Z
    labels:
      app: sonarqube
    name: sonarqube
    namespace: sonar-make
    resourceVersion: "23700334"
    selfLink: /apis/route.openshift.io/v1/namespaces/sonar-make/routes/sonarqube
    uid: 961bbb80-3d06-11ea-981e-0602d3a61226
  spec:
    host: sonarqube-sonar-make.app.okd.ibm-lab.com
    port:
      targetPort: 9000-tcp
    to:
      kind: Service
      name: sonarqube
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2020-01-22T11:01:48Z
        status: "True"
        type: Admitted
      host: sonarqube-sonar-make.app.okd.ibm-lab.com
      routerName: router
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
